<resources>
    <string name="app_name">ProblemsInHouse</string>
    <string name="usernameText">Username: </string>
    <string name="passwordText">Password: </string>
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
    <string name="noAccountText">"You don't have an account? "</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="fillAllFields">Fill all fields</string>
    <string name="userAlreadyExists">Username already exists</string>
    <string name="registerSuccess">User registered successfully</string>
    <string name="registerFail">Registration Failed</string>
    <string name="loginSuccess">Login Successful</string>
    <string name="invalidCredentials">Invalid Credentials</string>
    <string name="postFail">Post failed to upload\n</string>
    <string name="postUpload">Post uploaded</string>
    <string name="welcome">"Welcome, "</string>
    <string name="title">Post title</string>
    <string name="content">Post content</string>
    <string name="createPost">Create post</string>
    <string name="captureImage">Capture Image</string>
    <string name="zeroLives">You have 0 lives to post, try helping someone else first</string>
    <string name="noPicture">You need to take a picture first</string>
    <string name="noLogin">You have to login first</string>
    <string name="noCamera">no Camera available</string>
    <string name="commentHelped">" stated that your comment was helpful"</string>
    <string name="newComment">" commented at your problem with title "</string>
    <string name="deletePostSure">Are you sure that this comment helped yot and you want to delete the post?</string>
    <string name="yes">Yes</string>
    <string name="postDeleted">Post deleted</string>
    <string name="deleteFail">Delete failed</string>
    <string name="no">No</string>
    <string name="problemSolved">Problem Solved?</string>
    <string name="lives">"Lives: "</string>
    <string name="noUser">No user found</string>
    <string name="myProfile">My Profile</string>
    <string name="Notifications">Notifications</string>
    <string name="wasHelpful">This comment helped me</string>
    <string name="writeComment">Write comment...</string>
    <string name="send">Send</string>
    <string name="noNotifications">No notifications</string>
    <string name="submitPost">Submit Post</string>
    <string name="uploadWait">This may take a couple of seconds</string>

</resources>